2008-08-01  Bernhard Walle <bernhard.walle@gmx.de>

	* handle more programs in $KDUMP_REQUIRED_PROGRAMS correct

2008-07-31  Bernhard Walle <bernhard.walle@gmx.de>

	* change execution state to 'boot'
	* use UUID for fstab.kdump
	* open a shell if something fails and KDUMP_CONTINUE_ON_ERROR is true
	* don't include JFS to initrd
	* don't add -s '' parameter to mkinitrd call if the boot splash script
	  is not available

2008-07-28  Bernhard Walle <bwalle@suse.de>

	* don't exit with error code when the dump directory does not yet
	  exist in the 'delete_dumps' command
	* remove GDB from list of required programs in initrd
	* fix syntax error in init/boot-kdump.sh
	* always create empty ${tmp_mnt}/etc/fstab.kdump

2008-07-27  Bernhard Walle <bwalle@suse.de>

	* mount dump partition and boot partition in initrd

2008-07-25  Bernhard Walle <bwalle@suse.de>

	* copy required programs (KDUMP_REQUIRED_PROGRAMS) in initrd

2008-07-24  Bernhard Walle <bwalle@suse.de>

	* add 'print_target' sub command
	* implement SSH public/private key authentication

2008-07-24  Bernhard Walle <bwalle@suse.de>

	* redesign (version 0.5)

 vim: set ts=8 sw=8 noet: