@@ -8,6 +8,7 @@
  * don't add -s '' parameter to mkinitrd call if the boot splash script
    is not available
  * handle more programs in $KDUMP_REQUIRED_PROGRAMS correct
+ * move original /etc/fstab back
 
 0.5.3
 -----
